# submodule-openal-soft_apportable

jni/OpenAL/: CMakeLists.txt
